--- a/src/lib/homestore_backend/tests/CMakeLists.txt
+++ b/src/lib/homestore_backend/tests/CMakeLists.txt
@@ -1,32 +1,28 @@
 cmake_minimum_required(VERSION 3.13)
 
-include_directories (BEFORE .)
+include_directories(BEFORE .)
 
-list(APPEND TEST_SOURCES
-    hs_shard_tests.cpp
-    hs_blob_tests.cpp
-    hs_pg_tests.cpp
-    homeobj_cp_tests.cpp
-    test_homestore_backend.cpp
-    )
+add_library(homestore_tests_pg OBJECT)
+target_sources(homestore_tests_pg PRIVATE test_homestore_backend.cpp hs_pg_tests.cpp)
+target_link_libraries(homestore_tests_pg homeobject_homestore ${COMMON_TEST_DEPS})
 
-add_library(homestore_tests OBJECT)
-target_sources(homestore_tests PRIVATE ${TEST_SOURCES})
-target_link_libraries(homestore_tests
-            homeobject_homestore
-            ${COMMON_TEST_DEPS}
-        )
+add_library(homestore_tests_shard OBJECT)
+target_sources(homestore_tests_shard PRIVATE test_homestore_backend.cpp hs_shard_tests.cpp)
+target_link_libraries(homestore_tests_shard homeobject_homestore ${COMMON_TEST_DEPS})
 
+add_library(homestore_tests_blob OBJECT)
+target_sources(homestore_tests_blob PRIVATE test_homestore_backend.cpp hs_blob_tests.cpp)
+target_link_libraries(homestore_tests_blob homeobject_homestore ${COMMON_TEST_DEPS})
+
+add_library(homestore_tests_misc OBJECT)
+target_sources(homestore_tests_misc PRIVATE test_homestore_backend.cpp homeobj_misc_tests.cpp)
+target_link_libraries(homestore_tests_misc homeobject_homestore ${COMMON_TEST_DEPS})
 
 add_library(homestore_tests_dynamic OBJECT)
 target_sources(homestore_tests_dynamic PRIVATE test_homestore_backend_dynamic.cpp)
-target_link_libraries(homestore_tests_dynamic
-            homeobject_homestore
-            ${COMMON_TEST_DEPS}
-        )
+target_link_libraries(homestore_tests_dynamic homeobject_homestore ${COMMON_TEST_DEPS})
 
-add_executable (test_heap_chunk_selector)
+add_executable(test_heap_chunk_selector)
 target_sources(test_heap_chunk_selector PRIVATE test_heap_chunk_selector.cpp ../heap_chunk_selector.cpp)
 target_link_libraries(test_heap_chunk_selector homestore::homestore ${COMMON_TEST_DEPS})
 add_test(NAME HeapChunkSelectorTest COMMAND test_heap_chunk_selector)
-
