--- a/src/lib/homestore_backend/CMakeLists.txt
+++ b/src/lib/homestore_backend/CMakeLists.txt
@@ -90,16 +90,19 @@ add_test(NAME HomestoreTestReplaceMemberWithBaselineResync
         --override_config homestore_config.consensus.snapshot_freq_distance:13
         --override_config homestore_config.consensus.num_reserved_log_items=13
         --override_config homestore_config.consensus.snapshot_sync_ctx_timeout_ms=5000
+        --override_config homestore_config.generic.repl_dev_cleanup_interval_sec=5
         --gtest_filter=HomeObjectFixture.ReplaceMember)
 add_test(NAME HomestoreResyncTestWithFollowerRestart
         COMMAND homestore_test_dynamic -csv error --executor immediate --config_path ./
         --override_config homestore_config.consensus.snapshot_freq_distance:13
         --override_config homestore_config.consensus.num_reserved_log_items=13
         --override_config homestore_config.consensus.snapshot_sync_ctx_timeout_ms=5000
+        --override_config homestore_config.generic.repl_dev_cleanup_interval_sec=5
         --gtest_filter=HomeObjectFixture.RestartFollower*)
 add_test(NAME HomestoreResyncTestWithLeaderRestart
         COMMAND homestore_test_dynamic -csv error --executor immediate --config_path ./
         --override_config homestore_config.consensus.snapshot_freq_distance:13
         --override_config homestore_config.consensus.num_reserved_log_items=13
         --override_config homestore_config.consensus.snapshot_sync_ctx_timeout_ms=5000
+        --override_config homestore_config.generic.repl_dev_cleanup_interval_sec=5
         --gtest_filter=HomeObjectFixture.RestartLeader*)
