--- a/src/lib/homestore_backend/CMakeLists.txt
+++ b/src/lib/homestore_backend/CMakeLists.txt
@@ -55,25 +55,29 @@ add_executable(homestore_test_pg)
 target_sources(homestore_test_pg PRIVATE $<TARGET_OBJECTS:homestore_tests_pg>)
 target_link_libraries(homestore_test_pg PUBLIC homeobject_homestore ${COMMON_TEST_DEPS})
 add_test(NAME HomestoreTestPg COMMAND homestore_test_pg -csv error --executor immediate --config_path ./
-        --override_config homestore_config.consensus.snapshot_freq_distance:0)
+        --override_config homestore_config.consensus.snapshot_freq_distance:0
+        --override_config homestore_config.consensus.max_grpc_message_size:138412032)
 
 add_executable(homestore_test_shard)
 target_sources(homestore_test_shard PRIVATE $<TARGET_OBJECTS:homestore_tests_shard>)
 target_link_libraries(homestore_test_shard PUBLIC homeobject_homestore ${COMMON_TEST_DEPS})
 add_test(NAME HomestoreTestShard COMMAND homestore_test_shard -csv error --executor immediate --config_path ./
-        --override_config homestore_config.consensus.snapshot_freq_distance:0)
+        --override_config homestore_config.consensus.snapshot_freq_distance:0
+        --override_config homestore_config.consensus.max_grpc_message_size:138412032)
 
 add_executable(homestore_test_blob)
 target_sources(homestore_test_blob PRIVATE $<TARGET_OBJECTS:homestore_tests_blob>)
 target_link_libraries(homestore_test_blob PUBLIC homeobject_homestore ${COMMON_TEST_DEPS})
 add_test(NAME HomestoreTestBlob COMMAND homestore_test_blob -csv error --executor immediate --config_path ./
-        --override_config homestore_config.consensus.snapshot_freq_distance:0)
+        --override_config homestore_config.consensus.snapshot_freq_distance:0
+        --override_config homestore_config.consensus.max_grpc_message_size:138412032)
 
 add_executable(homestore_test_misc)
 target_sources(homestore_test_misc PRIVATE $<TARGET_OBJECTS:homestore_tests_misc>)
 target_link_libraries(homestore_test_misc PUBLIC homeobject_homestore ${COMMON_TEST_DEPS})
 add_test(NAME HomestoreTestMisc COMMAND homestore_test_misc -csv error --executor immediate --config_path ./
-        --override_config homestore_config.consensus.snapshot_freq_distance:0)
+        --override_config homestore_config.consensus.snapshot_freq_distance:0
+        --override_config homestore_config.consensus.max_grpc_message_size:138412032)
 
 # Dynamic tests
 add_executable(homestore_test_dynamic)
@@ -83,7 +87,8 @@ add_test(NAME HomestoreTestReplaceMember
         COMMAND homestore_test_dynamic -csv error --executor immediate --config_path ./
         --override_config homestore_config.consensus.snapshot_freq_distance:0
         --gtest_filter=HomeObjectFixture.ReplaceMember
-        --override_config homestore_config.generic.repl_dev_cleanup_interval_sec=5)
+        --override_config homestore_config.generic.repl_dev_cleanup_interval_sec=5
+        --override_config homestore_config.consensus.max_grpc_message_size:138412032)
 # To test both baseline & incremental resync functionality, we use 13 to minimize the likelihood of it being a divisor of the total LSN (currently 30)
 add_test(NAME HomestoreTestReplaceMemberWithBaselineResync
         COMMAND homestore_test_dynamic -csv error --executor immediate --config_path ./
@@ -91,6 +96,7 @@ add_test(NAME HomestoreTestReplaceMemberWithBaselineResync
         --override_config homestore_config.consensus.num_reserved_log_items=13
         --override_config homestore_config.consensus.snapshot_sync_ctx_timeout_ms=5000
         --override_config homestore_config.generic.repl_dev_cleanup_interval_sec=5
+        --override_config homestore_config.consensus.max_grpc_message_size:138412032
         --gtest_filter=HomeObjectFixture.ReplaceMember)
 add_test(NAME HomestoreResyncTestWithFollowerRestart
         COMMAND homestore_test_dynamic -csv error --executor immediate --config_path ./
@@ -98,6 +104,7 @@ add_test(NAME HomestoreResyncTestWithFollowerRestart
         --override_config homestore_config.consensus.num_reserved_log_items=13
         --override_config homestore_config.consensus.snapshot_sync_ctx_timeout_ms=5000
         --override_config homestore_config.generic.repl_dev_cleanup_interval_sec=5
+        --override_config homestore_config.consensus.max_grpc_message_size:138412032
         --gtest_filter=HomeObjectFixture.RestartFollower*)
 add_test(NAME HomestoreResyncTestWithLeaderRestart
         COMMAND homestore_test_dynamic -csv error --executor immediate --config_path ./
@@ -105,4 +112,5 @@ add_test(NAME HomestoreResyncTestWithLeaderRestart
         --override_config homestore_config.consensus.num_reserved_log_items=13
         --override_config homestore_config.consensus.snapshot_sync_ctx_timeout_ms=5000
         --override_config homestore_config.generic.repl_dev_cleanup_interval_sec=5
+        --override_config homestore_config.consensus.max_grpc_message_size:138412032
         --gtest_filter=HomeObjectFixture.RestartLeader*)
