implement gc thread model

--- a/src/lib/homestore_backend/tests/CMakeLists.txt
+++ b/src/lib/homestore_backend/tests/CMakeLists.txt
@@ -26,3 +26,7 @@ add_executable(test_heap_chunk_selector)
 target_sources(test_heap_chunk_selector PRIVATE test_heap_chunk_selector.cpp ../heap_chunk_selector.cpp)
 target_link_libraries(test_heap_chunk_selector homestore::homestore ${COMMON_TEST_DEPS})
 add_test(NAME HeapChunkSelectorTest COMMAND test_heap_chunk_selector)
+
+add_library(homestore_tests_gc OBJECT)
+target_sources(homestore_tests_gc PRIVATE test_homestore_backend.cpp hs_gc_tests.cpp)
+target_link_libraries(homestore_tests_gc homeobject_homestore ${COMMON_TEST_DEPS})
