--- a/src/lib/homestore_backend/CMakeLists.txt
+++ b/src/lib/homestore_backend/CMakeLists.txt
@@ -127,18 +127,12 @@ add_test(NAME HomestoreResyncTestWithLeaderRestart
 # GC tests
 add_test(NAME FetchDataWithOriginatorGC
         COMMAND homestore_test_dynamic -csv error --executor immediate --config_path ./
-        --override_config hs_backend_config.enable_gc=true 
-        # remove this until gc supports baseline resync
-        --override_config homestore_config.consensus.snapshot_freq_distance:0
         --gtest_filter=HomeObjectFixture.FetchDataWithOriginatorGC)
 
 add_executable(homestore_test_gc)
 target_sources(homestore_test_gc PRIVATE $<TARGET_OBJECTS:homestore_tests_gc>)
 target_link_libraries(homestore_test_gc PUBLIC homeobject_homestore ${COMMON_TEST_DEPS})
 add_test(NAME HomestoreTestGC COMMAND homestore_test_gc -csv error --executor immediate --config_path ./
-        --override_config hs_backend_config.enable_gc=true 
         --override_config hs_backend_config.gc_garbage_rate_threshold=0 
-        --override_config hs_backend_config.gc_scan_interval_sec=5
-        # remove this until gc supports baseline resync
-        --override_config homestore_config.consensus.snapshot_freq_distance:0)
+        --override_config hs_backend_config.gc_scan_interval_sec=5)
 
