--- a/.github/workflows/build_commit.yml
+++ b/.github/workflows/build_commit.yml
@@ -20,31 +20,29 @@ on:
         type: string
 
 jobs:
-  Sisl11Deps:
-    uses: eBay/sisl/.github/workflows/build_dependencies.yml@master
+  SislDeps:
+    uses: ebay/sisl/.github/workflows/build_dependencies.yml@master
     with:
       branch: master
       platform: ${{ inputs.platform }}
       build-type: ${{ inputs.build-type }}
       malloc-impl: ${{ inputs.malloc-impl }}
-      prerelease: ${{ inputs.prerelease }}
       tooling: None
     if: ${{ github.event_name != 'pull_request' }}
 
   NuraftMesgDeps:
-    needs: Sisl11Deps
+    needs: SislDeps
     uses: eBay/nuraft_mesg/.github/workflows/build_dependencies.yml@main
     with:
       branch: main
       platform: ${{ inputs.platform }}
       build-type: ${{ inputs.build-type }}
       malloc-impl: ${{ inputs.malloc-impl }}
-      prerelease: ${{ inputs.prerelease }}
       tooling: None
     if: ${{ github.event_name != 'pull_request' }}
 
   IOMgrDeps:
-    needs: [Sisl11Deps]
+    needs: [SislDeps]
     uses: eBay/iomanager/.github/workflows/build_dependencies.yml@master
     with:
       branch: master
