--- a/.github/workflows/build_dependencies.yml
+++ b/.github/workflows/build_dependencies.yml
@@ -5,7 +5,7 @@ on:
     inputs:
       platform:
         required: false
-        default: 'ubuntu-22.04'
+        default: 'ubuntu-24.04'
         type: string
       branch:
         required: true
@@ -33,11 +33,8 @@ on:
         required: true
         type: choice
         options:
-          - ubuntu-22.04
-          - ubuntu-20.04
-          - macos-13
-          - macos-12
-        default: 'ubuntu-22.04'
+          - ubuntu-24.04
+        default: 'ubuntu-24.04'
       branch:
         required: true
         type: string
@@ -97,22 +94,28 @@ jobs:
         ref: ${{ inputs.branch }}
       if: ${{ inputs.testing == 'False' }}
 
+    - name: Setup Conan
+      uses: ebay/sisl/.github/actions/setup_conan2@master
+      with:
+        platform: ${{ inputs.platform }}
+      if: ${{ inputs.testing == 'True' || steps.restore-cache.outputs.cache-hit != 'true' }}
+
     - name: Load HomeObject Cache
       id: restore-cache
-      uses: eBay/sisl/.github/actions/load_conan@master
+      uses: eBay/sisl/.github/actions/load_conan2@master
       with:
         testing: ${{ inputs.testing }}
         key_prefix: HomeObjectDeps-${{ inputs.platform }}-${{ inputs.build-type }}-${{ inputs.malloc-impl }}-${{ inputs.prerelease }}
 
     - name: Load Sisl Cache
-      uses: eBay/sisl/.github/actions/load_conan@master
+      uses: eBay/sisl/.github/actions/load_conan2@master
       with:
         load_any: 'True'
-        key_prefix: SislDeps-${{ inputs.platform }}-${{ inputs.build-type }}-${{ inputs.malloc-impl }}-${{ inputs.prerelease }}
+        key_prefix: SislDeps13-${{ inputs.platform }}-${{ inputs.build-type }}-${{ inputs.malloc-impl }}
       if: ${{ inputs.testing == 'True' || steps.restore-cache.outputs.cache-hit != 'true' }}
 
     - name: Load IOMgr Cache
-      uses: eBay/sisl/.github/actions/load_conan@master
+      uses: eBay/sisl/.github/actions/load_conan2@master
       with:
         load_any: 'True'
         key_prefix: IOMgrDeps-${{ inputs.platform }}-${{ inputs.build-type }}-${{ inputs.malloc-impl }}-${{ inputs.prerelease }}
@@ -127,11 +130,11 @@ jobs:
       if: ${{ inputs.testing == 'True' || steps.restore-cache.outputs.cache-hit != 'true' }}
 
     - name: Load NuRaftMesg Cache
-      uses: eBay/sisl/.github/actions/load_conan@master
+      uses: eBay/sisl/.github/actions/load_conan2@master
       with:
         testing: 'False'
         path: import/nuraft_mesg
-        key_prefix: NuMesgDeps-${{ inputs.platform }}-${{ inputs.build-type }}-${{ inputs.malloc-impl }}-${{ inputs.prerelease }}
+        key_prefix: NuMesgDeps-${{ inputs.platform }}-${{ inputs.build-type }}-${{ inputs.malloc-impl }}
         fail_on_cache_miss: true
       if: ${{ inputs.testing == 'True' || steps.restore-cache.outputs.cache-hit != 'true' }}
 
@@ -144,7 +147,7 @@ jobs:
       if: ${{ inputs.testing == 'True' || steps.restore-cache.outputs.cache-hit != 'true' }}
 
     - name: Load HomeStore Cache
-      uses: eBay/sisl/.github/actions/load_conan@master
+      uses: eBay/sisl/.github/actions/load_conan2@master
       with:
         testing: 'False'
         path: import/homestore
@@ -153,25 +156,17 @@ jobs:
       if: ${{ inputs.testing == 'True' || steps.restore-cache.outputs.cache-hit != 'true' }}
 
 
-    - name: Setup Conan
-      uses: eBay/sisl/.github/actions/setup_conan@master
-      with:
-        platform: ${{ inputs.platform }}
-      if: ${{ inputs.testing == 'True' || steps.restore-cache.outputs.cache-hit != 'true' }}
-
     - name: Export Recipes
       run: |
         sudo apt-get install -y python3-pyelftools libaio-dev
         python -m pip install pyelftools
-        conan export import/homestore oss/master
-        conan export import/nuraft_mesg oss/main
-        cached_pkgs=$(ls -1d ~/.conan/data/*/*/*/*/export | sed 's,.*data/,,' | cut -d'/' -f1,2 | paste -sd',' - -)
-        echo "::info:: Pre-cached: ${cached_pkgs}"
+        conan export --user oss --channel master import/homestore
+        conan export --user oss --channel main import/nuraft_mesg
       if: ${{ inputs.testing == 'True' || steps.restore-cache.outputs.cache-hit != 'true' }}
 
     - name: Build Cache
       run: |
-        pre=$([[ "${{ inputs.build-type }}" != "Debug" ]] && echo "-o sisl:prerelease=${{ inputs.prerelease }}" || echo "")
+        pre=$([[ "${{ inputs.build-type }}" != "Debug" ]] && echo "-o iomgr/*:prerelease=${{ inputs.prerelease }}" || echo "")
         echo "Disk space usage"
         sudo df -h
         sudo ls -l /tmp
@@ -181,52 +176,48 @@ jobs:
         conan install \
             -c tools.build:skip_test=True \
             ${pre} \
-            -o sisl:malloc_impl=${{ inputs.malloc-impl }} \
-            -o iomgr:testing=off \
-            -o homestore:testing=off \
-            -s build_type=${{ inputs.build-type }} \
+            -o sisl/*:malloc_impl=${{ inputs.malloc-impl }} \
+            -o iomgr/*:testing=off \
+            -o homestore/*:testing=off \
+            -s:h build_type=${{ inputs.build-type }} \
+            -c tools.build:skip_test=True \
+            --format=json \
             --build missing \
-            .
+            . > ~/build.json
+        conan list --graph ~/build.json --graph-binaries=build --format=json > ~/pkglist.json
       if: ${{ steps.restore-cache.outputs.cache-hit != 'true' }}
 
     - name: Save Conan Cache
-      uses: eBay/sisl/.github/actions/store_conan@master
+      uses: eBay/sisl/.github/actions/store_conan2@master
       with:
         key_prefix: HomeObjectDeps-${{ inputs.platform }}-${{ inputs.build-type }}-${{ inputs.malloc-impl }}-${{ inputs.prerelease }}
       if: ${{ github.event_name != 'pull_request' && steps.restore-cache.outputs.cache-hit != 'true' }}
 
-    - name: Reload Sisl11 Cache
-      uses: eBay/sisl/.github/actions/load_conan@master
-      with:
-        load_any: 'True'
-        key_prefix: SislDeps-${{ inputs.platform }}-${{ inputs.build-type }}-${{ inputs.malloc-impl }}-${{ inputs.prerelease }}
-      if: ${{ inputs.testing == 'True' && github.event_name != 'pull_request' && steps.restore-cache.outputs.cache-hit != 'true' }}
-
     - name: Reload Sisl Cache
-      uses: eBay/sisl/.github/actions/load_conan@master
+      uses: eBay/sisl/.github/actions/load_conan2@master
       with:
         load_any: 'True'
-        key_prefix: SislDeps-${{ inputs.platform }}-${{ inputs.build-type }}-${{ inputs.malloc-impl }}-${{ inputs.prerelease }}
+        key_prefix: SislDeps13-${{ inputs.platform }}-${{ inputs.build-type }}-${{ inputs.malloc-impl }}
       if: ${{ inputs.testing == 'True' && github.event_name != 'pull_request' && steps.restore-cache.outputs.cache-hit != 'true' }}
 
     - name: Reload IOMgr Cache
-      uses: eBay/sisl/.github/actions/load_conan@master
+      uses: eBay/sisl/.github/actions/load_conan2@master
       with:
         load_any: 'True'
         key_prefix: IOMgrDeps-${{ inputs.platform }}-${{ inputs.build-type }}-${{ inputs.malloc-impl }}-${{ inputs.prerelease }}
       if: ${{ inputs.testing == 'True' && github.event_name != 'pull_request' && steps.restore-cache.outputs.cache-hit != 'true' }}
 
     - name: Reload NuRaftMesg Cache
-      uses: eBay/sisl/.github/actions/load_conan@master
+      uses: eBay/sisl/.github/actions/load_conan2@master
       with:
         testing: 'False'
         path: import/nuraft_mesg
-        key_prefix: NuMesgDeps-${{ inputs.platform }}-${{ inputs.build-type }}-${{ inputs.malloc-impl }}-${{ inputs.prerelease }}
+        key_prefix: NuMesgDeps-${{ inputs.platform }}-${{ inputs.build-type }}-${{ inputs.malloc-impl }}
         fail_on_cache_miss: true
       if: ${{ inputs.testing == 'True' && github.event_name != 'pull_request' && steps.restore-cache.outputs.cache-hit != 'true' }}
 
     - name: Reload HomeStore Cache
-      uses: eBay/sisl/.github/actions/load_conan@master
+      uses: eBay/sisl/.github/actions/load_conan2@master
       with:
         testing: 'False'
         path: import/homestore
@@ -244,36 +235,35 @@ jobs:
     - name: Create and Test Package
       run: |
         sanitize=$([[ "${{ inputs.tooling }}" == "Sanitize" ]] && echo "True" || echo "False")
-        pre=$([[ "${{ inputs.build-type }}" != "Debug" ]] && echo "-o sisl:prerelease=${{ inputs.prerelease }}" || echo "")
+        pre=$([[ "${{ inputs.build-type }}" != "Debug" ]] && echo "-o iomgr/*:prerelease=${{ inputs.prerelease }}" || echo "")
         conan create \
             ${pre} \
-            -o sisl:malloc_impl=${{ inputs.malloc-impl }} \
-            -o iomgr:testing=off \
-            -o homestore:testing=off \
-            -o homeobject:sanitize=${sanitize} \
-            -s build_type=${{ inputs.build-type }} \
+            -o sisl/*:malloc_impl=${{ inputs.malloc-impl }} \
+            -o iomgr/*:testing=off \
+            -o homestore/*:testing=off \
+            -o homeobject/*:sanitize=${sanitize} \
+            -s:h build_type=${{ inputs.build-type }} \
             --build missing \
             .
       if: ${{ inputs.testing == 'True' && inputs.tooling != 'Coverage' }}
 
     - name: Code Coverage Run
       run: |
-        pre=$([[ "${{ inputs.build-type }}" != "Debug" ]] && echo "-o sisl:prerelease=${{ inputs.prerelease }}" || echo "")
-        conan install \
+        pre=$([[ "${{ inputs.build-type }}" != "Debug" ]] && echo "-o iomgr/*:prerelease=${{ inputs.prerelease }}" || echo "")
+        conan build \
             ${pre} \
-            -o sisl:malloc_impl=${{ inputs.malloc-impl }} \
-            -o iomgr:testing=off \
-            -o homestore:testing=off \
-            -o coverage=True \
-            -s build_type=${{ inputs.build-type }} \
+            -o sisl/*:malloc_impl=${{ inputs.malloc-impl }} \
+            -o iomgr/*:testing=off \
+            -o homestore/*:testing=off \
+            -o homestore/*:coverage=True \
+            -s:h build_type=${{ inputs.build-type }} \
             --build missing \
             .
-        conan build .
       if: ${{ inputs.testing == 'True' && inputs.tooling == 'Coverage' }}
 
     - name: Upload coverage reports to Codecov
-      uses: codecov/codecov-action@v4
+      uses: codecov/codecov-action@v5
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
-        gcov: true
+        verbose: true
       if: ${{ inputs.testing == 'True' && inputs.tooling == 'Coverage' }}
