--- a/.github/workflows/build_dependencies.yml
+++ b/.github/workflows/build_dependencies.yml
@@ -255,7 +255,7 @@ jobs:
             -o sisl/*:malloc_impl=${{ inputs.malloc-impl }} \
             -o iomgr/*:testing=off \
             -o homestore/*:testing=off \
-            -o homestore/*:coverage=True \
+            -o homeobject/*:coverage=True \
             -s:h build_type=${{ inputs.build-type }} \
             --build missing \
             .
